--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -4,6 +4,7 @@
       "useDefineForClassFields": true,
       "module": "esnext",
       "moduleResolution": "node",
+      "allowJs": true,
       "strict": true,
       "jsx": "preserve",
       "sourceMap": true,
@@ -12,6 +13,6 @@
       "lib": ["esnext", "dom"],
       "types": ["vite/client"]
     },
-    "include": ["./**/*.ts", "./**/*.d.ts", "./**/*.tsx", "./**/*.vue"],
+    "include": ["./**/*.ts", "./**/*.d.ts", "./**/*.tsx", "./**/*.vue", "./**/*.js"],
   }
   
